# Chatbot_Interface_Streamlit

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
llm_services/: deepseek_client.py
model/: api_conection.py
streamlit_ui/: streamlit_app.py
